--- a/plugins/generator-1.21.8/neoforge-1.21.8/common.items.yaml
+++ b/plugins/generator-1.21.8/neoforge-1.21.8/common.items.yaml
@@ -1,3 +1,4 @@
 global_templates:
   - template: elementinits/items.java.ftl
+    list_limit: 3
     name: "@SRCROOT/@BASEPACKAGEPATH/init/@JavaModNameItems.java"
