--- a/build.gradle
+++ b/build.gradle
@@ -144,15 +144,7 @@ dependencies {
     macAarch64 group: 'com.formdev', name: 'flatlaf', version: '3.6.2', classifier: 'macos-arm64', ext: 'dylib'
     linux64 group: 'com.formdev', name: 'flatlaf', version: '3.6.2', classifier: 'linux-x86_64', ext: 'so'
 
-    // TODO: determine if it may make more sense to use JBR with JCEF bundled instead
-    implementation(group: 'me.friwi', name: 'jcefmaven', version: '135.0.20') {
-        dep -> {
-            // Only needed for OSR rendering which we don't use right now
-            dep.exclude group: 'me.friwi', module: 'jogl-all'
-            dep.exclude group: 'me.friwi', module: 'gluegen-rt'
-            // TODO: we may also be able to exclude GSON and commons-compress here if we bundle directly
-        }
-    }
+    implementation group: 'me.friwi', name: 'jcefmaven', version: '135.0.20'
     win64 group: 'me.friwi', name: 'jcef-natives-windows-amd64', version: 'jcef-ca49ada+cef-135.0.20+ge7de5c3+chromium-135.0.7049.85'
     macX64 group: 'me.friwi', name: 'jcef-natives-macos-amd64', version: 'jcef-ca49ada+cef-135.0.20+ge7de5c3+chromium-135.0.7049.85'
     macAarch64 group: 'me.friwi', name: 'jcef-natives-macos-arm64', version: 'jcef-ca49ada+cef-135.0.20+ge7de5c3+chromium-135.0.7049.85'
